# PFT_GEM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/HCP1065_DTI/: README.md
data/MNI152/: README.md
data/SUIT/: LICENSE  README.md  atl-Anatom.tsv
data/example/: README.md
data/suit_template/: README.md
examples/: basic_usage.py  with_visualization.py
notebooks/: pft_gem_tutorial.ipynb
pft_gem/: __init__.py
pft_gem/core/: __init__.py  constraints.py  displacement.py  geometric_model.py  tumor_growth_simulation.py
pft_gem/io/: __init__.py  nifti_handler.py  synthetic_output.py  template_loader.py
pft_gem/utils/: __init__.py  helpers.py
pft_gem/visualization/: __init__.py  plotting.py
tests/: __init__.py  test_geometric_model.py
