[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pft_gem"
version = "0.1.0"
description = "Geometric Expansion Model for Posterior Fossa Tumor Displacement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Stuart McAfee"}
]
keywords = [
    "neuroimaging",
    "brain tumor",
    "displacement field",
    "posterior fossa",
    "cerebellum",
    "medical imaging",
    "biomechanics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
full = [
    "nibabel>=4.0.0",
    "matplotlib>=3.5.0",
    "jupyter",
]
viz = [
    "matplotlib>=3.5.0",
]
nifti = [
    "nibabel>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/StuMcAfee/PFT_GEM"
Documentation = "https://github.com/StuMcAfee/PFT_GEM#readme"
Repository = "https://github.com/StuMcAfee/PFT_GEM.git"
Issues = "https://github.com/StuMcAfee/PFT_GEM/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
